fix: align items

--- a/src/components/Bar/Bar.module.css
+++ b/src/components/Bar/Bar.module.css
@@ -8,6 +8,7 @@
 .middleGroup,
 .endGroup {
   display: flex;
+  align-items: center;
 }
 
 .startGroup {
